Overflow fix on android

--- a/src/css/frag/layout.less
+++ b/src/css/frag/layout.less
@@ -390,8 +390,8 @@ article.main-wrapper {
 	padding:0;
 	margin:0;
 
-
 	padding-bottom:300px;
+	overflow:hidden;
 
 	section {
 
@@ -402,6 +402,7 @@ article.main-wrapper {
 		min-height:600px;
 		min-width:320px;
 		margin:0;
+		padding:0;
 		display:block;
 
 		h2 {
